--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
             "email": "daigox.official@gmail.com"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "require": {}
 }
